Alignement des items dans les menus de la page d'accueil un peu plus correct

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -74,18 +74,18 @@ header {
     #menu1 {
         background-color: #fcdfdb;
         img {
-            top: 40%;
+            top: 36%;
             width: 30px;
             height: 30px;
         }
         h2 {
-            top: 45%;
+            top: 42%;
             font-family: 'devonshire';
             font-size: 125%;
             color: #3c1218;
         }
         h3 {
-            top: 55%;
+            top: 52%;
             font-family: 'kalam';
             color: #3c1218;
         }    
@@ -93,9 +93,9 @@ header {
     #menu2 {
         background-color: #fff5fe;
         h2 {
-            top: 40%;
+            top: 38%;
             font-family: 'croissant';
-            font-size: 95%;
+            font-size: 85%;
             color: #c77529;
             background: -o-linear-gradient(left, #c77529 0%, #6a56a5 100%);
             background: linear-gradient(to right, #c77529 0%, #6a56a5 100%);
@@ -103,7 +103,8 @@ header {
             -webkit-text-fill-color: transparent;
         }
         h3 {
-            top: 50%;
+            top: 51%;
+            font-size: 90%;
             font-family: 'charissil';
             color: #c77412;
         }
@@ -111,7 +112,7 @@ header {
     #menu3 {
         background-color: #f9f9f9;
         h2 {
-            top: 35%;
+            top: 37%;
             font-family: 'parisienne';
             font-size: 120%;
             color: #0431df;
